# vargeno_min

./: CMakeLists.txt
src/: dictgen.c  dictgen.h  gbf.cc  generate_bf.cc  generate_bf.h  qv.cc  util.c  util.h
test/: reads_new.fq
